<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.Settings"
    android:background="#ececec">
    <include layout="@layout/appbar"
        android:id="@+id/appbar"/>
    <ScrollView
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/top_background" />



                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    app:cardCornerRadius="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="220dp"
                    android:id="@+id/card"
                    >

                    <ImageView
                        android:id="@+id/image_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/user" />


                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/textViewname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Aukenov Asanali"

                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="395dp"
                    />



                <TextView
                    android:id="@+id/textViewset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+7 777 701 98 77"
                    android:textSize="20sp"

                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="435dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:layout_marginTop="522dp"
                    >

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"


                        android:visibility="gone"


                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_background_1"
                        android:drawableStart="@drawable/ic_1"
                        android:drawablePadding="20dp"
                        android:paddingStart="20dp"
                        android:text="Настройки"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        style="@android:style/Widget.Button"
                        android:textAlignment="viewStart" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/language"
                        android:foreground="?attr/actionBarItemBackground"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_background_1"
                        android:drawableStart="@drawable/asd34"
                        android:drawablePadding="20dp"
                        android:paddingStart="20dp"
                        android:text="@string/anotherlan"
                        android:textAlignment="viewStart"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/language2"
                        android:foreground="?attr/actionBarItemBackground"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_background_1"
                        android:drawableStart="@drawable/asd34"
                        android:drawablePadding="20dp"
                        android:paddingStart="20dp"
                        android:text="@string/anotherlan2"
                        android:textAlignment="viewStart"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/chat"
                        android:foreground="?attr/actionBarItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        style="@android:style/Widget.Button"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_background_1"
                        android:drawableStart="@drawable/chat3"
                        android:drawablePadding="20dp"
                        android:paddingStart="20dp"
                        android:text="@string/chat"
                        android:textAlignment="viewStart" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/image_change"
                        android:foreground="?attr/actionBarItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        style="@android:style/Widget.Button"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_background_1"
                        android:drawableStart="@drawable/image"
                        android:drawablePadding="20dp"
                        android:paddingStart="20dp"
                        android:text="@string/imagechn"
                        android:textAlignment="viewStart" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/quit"
                        android:foreground="@drawable/effect"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:textSize="18sp"
                        android:background="@drawable/red_border"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="32dp"
                        android:text="@string/quit"
                        android:textColor="@color/red"

                        />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
